--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ejs-locals": "^1.0.2",
     "express": "^4.13.4",
     "lodash": "^4.0.1",
-    "moment": "^2.11.1"
+    "moment": "^2.11.1",
+    "request": "^2.69.0"
   },
   "devDependencies": {},
   "scripts": {
